<resources>
    <string name="app_name">Project</string>
    <string name="login">LogIn</string>
    <string name="account">not have an account ? </string>
    <string name="register">SignUp</string>
    <string name="facebook">Login with facebook</string>
    <string name="email">Email/User Name</string>
    <string name="or">OR</string>
    <string name="job">Job</string>
    <string name="password">Password</string>
    <string name="repassword">RePassword</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="photo">add photo</string>
    <string name="title_activity_name"></string>
    <string name="title_activity_map_frag1">Map</string>
    <string-array name="planets_array">
        <item>15 ... 30</item>
        <item>30 ... 45</item>
        <item>45 ... 60</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_broad_cast">BroadCastActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_broad_casting">BroadCastingActivity</string>>
</resources>
