<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundHome"
    tools:context="com.example.abuelwafa_.za3a2.LogReg.LogInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300px"
            android:src="@mipmap/logo"
            android:layout_gravity="center"
            />
    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="41dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:background="@android:drawable/editbox_background"
                        android:hint="@string/email"
                        android:layout_marginBottom="25dp"
                        android:drawablePadding="20dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginLeft="3dp"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/pass"
                        android:paddingLeft="20dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginLeft="3dp"
                        android:hint="@string/password"
                        android:background="@android:drawable/editbox_background"
                        android:drawablePadding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:inputType="numberPassword"
                        android:layout_marginBottom="30px"/>

                </LinearLayout>

            </LinearLayout>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="650px"
                android:layout_marginLeft="0px"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/buttons"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/or"
                    android:layout_marginLeft="0dp"
                    android:padding="10dp"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/regist"
                android:layout_width="650px"
                android:layout_marginLeft="0px"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/facebook"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:paddingTop="0dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/colorPrimary"/>
                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="40px"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:background="@color/backgroundHome"
                    android:id="@+id/btn_register" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
