<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/backgroundHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abuelwafa_.za3a2.LogReg.LogInActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create New account"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:id="@+id/address"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="80">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="20">

            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:id="@+id/photo"
                android:hint="add photo"
                android:background="@drawable/register_form"
                android:width="120dp"
                android:height="100dp"
                android:gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="50" />
            />



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0px"
                android:layout_marginRight="90px"
                android:layout_height="match_parent"
                android:background="@drawable/register_form"
                android:layout_weight="50">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstName"
                    android:hint="@string/FirstName"
                    android:layout_weight="50" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/LastName"
                    android:hint="@string/LastName"
                    android:layout_weight="50" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="80">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:hint="@string/email"
                android:drawablePadding="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="35px"
                android:padding="10dp"
                android:background="@drawable/register_form"
                android:id="@+id/Email"
                android:layout_weight="16" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:id="@+id/Password"
                android:background="@drawable/register_form"
                android:layout_weight="16" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repassword"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="15dp"
                android:padding="10dp"
                android:id="@+id/RePassword"
                android:background="@drawable/register_form"
                android:layout_weight="16" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:drawablePadding="15dp"
                android:padding="10dp"
                android:background="@drawable/register_form"
                android:id="@+id/phone"
                android:layout_weight="16"
                android:hint="@string/Phone"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_account_balance_black_24dp"
                android:drawablePadding="15dp"
                android:padding="10dp"
                android:background="@drawable/register_form"
                android:layout_weight="16"
                android:hint="@string/Address"
                android:textColor="@color/black"
                android:id="@+id/addresses" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/buttons"
                android:id="@+id/create"
                android:layout_weight="17" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
